 - Write top-level html last for better sorting (Christian Walde) (github 158)
 - Restore XS coverage in cpancover (H.Merijn Brand) (github 188)
 - Allow cpancover to run fully from local directory
 - Handle missing start times in runs (Chad Granum) (github 190)
 - Add test for string eval (Sebastian Paaske Tørholm) (github 145)

Release 1.26 - 24 July 2017
 - Untaint $DEVEL_COVER_OPTIONS (Alexey Sokolov) (github 187)
 - Add loose_perms option (Todd Rinaldo) (github 185)
 - Set EXTENDED_TESTING during cpancover runs
 - Improve version parsing for cpancover (Helmut Wollmersdorfer) (github 124)
 - Improve cpancover code and documentation

Release 1.25 - 11 May 2017
 - Fix C code to work with MSVC (Marc-Philip) (github 177)
 - Fix cover command using Module::Build on Win32 (sago35) (github 160)
 - Add file and line info to keep ops unique (Niko Tyni) (github 143)
 - Report coverage for all declarations (Heinz Knutzen) (github 166)
 - Fix spelling mistakes (Gregor Herrmann) (github 171)
 - Fix condition coverage for complex conditions (Heinz Knutzen) (github 165)
 - Use JSON::MaybeXS for sppen and flexibility (Olivier Mengué) (github 139)
 - Add CONTRIBUTING file (Gabor Szabó) (github 100)

Release 1.24 - 18 April 2017
 - Work with 5.25.x (op_sibling) (Dan Collins, Matthew Horsfall) (github 162)
 - Perl versions below 5.10.0 are now unsupported

Release 1.23 - 24 April 2016
 - Enhance html coverage popups (Haydn Newport) (github 156)
 - Add cpancover about page (Guillermo O. Freschi) (github 146)
 - Perl versions below 5.8.1 are now unsupported

Release 1.22 - 9 April 2016
 - Test against 5.20.3, 5.23.1 - 5.23.9, 5.22.1
 - Improve uncoverable docs (Alex Balhatchet) (github 148)
 - Improve cpancover

Release 1.21 - 20 September 2015
 - Test more versions on travis
 - Fix things up with cpancover for new docker release
 - Fix problem under 5.22 (Dick Franks) (github 140)

Release 1.20 - 6 July 2015
 - Document setting PerlSwitches for mod_perl (jpsalvesen) (github 128)
