@@ -60,6 +60,7 @@ jpsalvesen
 Kan Fushihara                  kan.fushihara@gmail.com
 Keith Wissing
 Kent Fredric                   kentfredric@gmail.com
+Kevin Brannen                  kbrannen@pwhome.com
 Kirk Kimmel                    kimmel@cpan.org
 Larry Leszczynski              larryl@cpan.org
 Lasse Makholm                  lasse@unity3d.com
