@@ -1,4 +1,5 @@
 Reading database from ...
+Unknown type true found parsing uncoverable condition at tests/uncoverable:45
 2 unmatched uncoverable comments not found at end of tests/uncoverable
 
 
@@ -57,8 +58,26 @@ line  err   stmt   bran   cond    sub   code
 35            -0                   -0       $y++; # uncoverable statement
 36                                      }
 37                                      
-38                                      # uncoverable statement
-39                                      # uncoverable subroutine
+38                                      # uncoverable branch false count:1
+39                                      # uncoverable branch true  count:2
+40                                      # uncoverable branch false count:2
+41                                      # uncoverable condition left  count:1
+42                                      # uncoverable condition right count:1
+43                                      # uncoverable condition left  count:2
+44                                      # uncoverable condition right count:2
+45                                      # uncoverable condition true  count:2
+46                                      # uncoverable condition false count:2
+47             1   - 50   - 33          if ($x > 0 && $y > 0) {
+                   -  0   -  0          
+48             1                            $y++;
+49                                      } elsif ($x < 2 && $y < 0) {
+50            -0                            $y++; # uncoverable statement
+51                                      } else {
+52            -0                            $y++; # uncoverable statement
+53                                      }
+54                                      
+55                                      # uncoverable statement
+56                                      # uncoverable subroutine
 
 
 Branches
@@ -68,6 +87,8 @@ line  err      %   true  false   branch
 ----- --- ------ ------ ------   ------
 18          - 50     -0      1   if ($x and not $y)
 27          - 50     -0      1   if (not $x and $y)
+47          - 50      1     -0   if ($x > 0 and $y > 0) { }
+            -  0     -0     -0   elsif ($x < 2 and $y < 0) { }
 
 
 Conditions
@@ -79,6 +100,8 @@ line  err      %     !l  l&&!r   l&&r   expr
 ----- --- ------ ------ ------ ------   ----
 18          - 33     -0      1     -0   $x and not $y
 27          - 33      1     -0     -0   not $x and $y
+47          - 33     -0     -0      1   $x > 0 and $y > 0
+            -  0     -0     -0     -0   $x < 2 and $y < 0
 
 
 Uncovered Subroutines
